--- a/Cooking.html
+++ b/Cooking.html
@@ -19,7 +19,7 @@
   <script src="script.js"></script>
   <script src="homepage.js"></script>
   <!-- Navigation bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="ExplainMe.html">ExplainMe</a>
       
@@ -27,7 +27,7 @@
         <button class="btn btn-secondary dropdown-toggle" onclick="myFunction()">Category</button>
         <div id="myDropdown" class="dropdown-content">
           <a href="Informatic.html">Informatic</a>
-          <a href="Cooking.html">Coocking</a>
+          <a href="Cooking.html">Cooking</a>
           <a href="Arts.html">Arts</a>
           <a href="Bricolage.html">Bricolage</a>  
         </div>
