--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="Profile.html">Profile</a>
           </li>
         </ul>
         
