--- a/edit.html
+++ b/edit.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
 
   <script>
@@ -18,6 +19,7 @@
 
 <body onload="fillEditForm()">
   <script src="script.js"></script>
+  <script src="edit.js"></script>
 
 <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -54,7 +56,7 @@
         <h5 class="mb-0">Edit Post</h5>
       </div>
       <div class="card-body">
-        <form onsubmit="submitForm(event)">
+        <form class="form">
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" class="form-control" id="title" name="title" required>
